# movie-catalog-backend

./: .gitignore  CLAUDE.md  Dockerfile  README.md  base-image-btp.sh  pyproject.toml
.claude/: settings.local.json
data/: movie_catalog.db  movies.json  theaters.json
docs/: PRD.md  TRD.md
src/movie_catalog_backend/: __init__.py  app.py
src/movie_catalog_backend/db/: config.py  seed.py  session.py
src/movie_catalog_backend/entity/: __init__.py  models.py
src/movie_catalog_backend/route/: movies.py  theaters.py
src/movie_catalog_backend/scheme/: __init__.py  movie.py  theater.py
src/movie_catalog_backend/service/: movie_service.py  theater_service.py
